# PoldrackLab_CBPM

./: CBPM.py  README.md  fc-withglob.py  fc.ipynb  functional-connectivity-from-notebook.py  functional_connectivity.ipynb  functional_connectivity.py  updated_CBPM.py
.ipynb_checkpoints/: CBPM_tutorial-checkpoint.ipynb
Chris/: CBPM.py  fc.ipynb  pyproject.toml
