[tool.poetry]
name = "CBPM"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nilearn = "^0.7.1"
wheel = "^0.36.2"
pandas = "^1.2.4"
numpy = "^1.20.3"
ipykernel = "^5.5.4"
jupyterlab = "^3.0.15"
matplotlib = "^3.4.2"
mplcursors = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
